--- a/src/HornedBeast.css
+++ b/src/HornedBeast.css
@@ -1,16 +1,16 @@
-article {
-  border: 1px solid black;
+.articleCard {
+  border: 1px solid rgb(0, 0, 0);
   padding: 1vw;
   margin-bottom: 1vw;
   width: 20%;
 }
 
-article img {
+.imgCard {
   width: 100%;
   height: 250px;
 }
 
-article p {
+.pCard {
   font-size: 16px;
   margin: auto;
   margin-bottom: .5rem;
